// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback/> should render 1`] = `
<div>
  <div
    class="sc-gEvEer hpVpdb sc-lnPyaJ fUzeBq"
  >
    <div
      class="sc-aXZVg gZgZQL"
    >
      <div
        class="sc-iGgWBj cRLRjd"
      >
        <div
          class="sc-kqGoIF gSKWVS"
        >
          <h2
            class="sc-dxcDKg gzfSFJ sc-kAyceB kDiAsV"
          >
            <span
              class="sc-gsFSXq cdZUuw"
            />
            Avez-vous trouvé la réponse à votre question ?
          </h2>
          <p
            class="sc-gvZAcH cGMfGa"
          >
            <button
              class="sc-kOPcWz cpQXMn sc-kRRyDe eWYjtA"
            >
              Non
            </button>
            <button
              class="sc-kOPcWz cpQXMn sc-kRRyDe eWYjtA"
            >
              Oui
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer no 1`] = `
<div>
  <div
    class="sc-gEvEer hpVpdb sc-lnPyaJ fUzeBq"
  >
    <div
      class="sc-aXZVg gZgZQL"
    >
      <div
        class="sc-iGgWBj cRLRjd"
      >
        <div
          class="sc-kqGoIF gSKWVS"
        >
          <h2
            class="sc-dxcDKg gzfSFJ sc-kAyceB kDiAsV"
          >
            <span
              class="sc-gsFSXq cdZUuw"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <fieldset
            class="sc-dExYaf lewfNO"
          >
            <legend
              class="sc-iapWAC lhWvfu"
            >
              Pouvez-vous nous en dire plus ?
            </legend>
            <label
              class="sc-eyvILC erxqfW"
              for="unclear"
            >
              <input
                class="sc-gfoqjT UMmfj"
                id="unclear"
                name="category"
                type="checkbox"
                value="unclear"
              />
              Les informations ne sont pas claires.
            </label>
            <label
              class="sc-eyvILC erxqfW"
              for="unrelated"
            >
              <input
                class="sc-gfoqjT UMmfj"
                id="unrelated"
                name="category"
                type="checkbox"
                value="unrelated"
              />
              Cette page ne correspond pas à ma recherche ou à ma situation.
            </label>
            <label
              class="sc-eyvILC erxqfW"
              for="unsatisfied"
            >
              <input
                class="sc-gfoqjT UMmfj"
                id="unsatisfied"
                name="category"
                type="checkbox"
                value="unsatisfied"
              />
              Je ne suis pas satisfait de cette réglementation.
            </label>
            <label
              class="sc-eyvILC erxqfW"
              for="wrong"
            >
              <input
                class="sc-gfoqjT UMmfj"
                id="wrong"
                name="category"
                type="checkbox"
                value="wrong"
              />
              Les informations me semblent fausses.
            </label>
          </fieldset>
          <label
            class="sc-dNsVcS JpRGI"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-gdyeKB kWUKFl sc-ERObt hsIPks"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-iMTnTL bCcoWP"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-cWSHoV bKtA-De"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-fulCBj dCCqfF"
          >
            <button
              class="sc-kOPcWz dSQWfG sc-kRRyDe eWYjtA"
            >
              Envoyer
            </button>
          </div>
        </form>
        <p>
          Pour obtenir une réponse à votre question de droit du travail, nous vous invitons à joindre
           
          <button
            class="sc-kOPcWz gACNan"
            type="button"
          >
            les services du ministère du Travail en région
            <svg
              aria-hidden="true"
              fill="none"
              viewBox="0 0 28 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
                fill="currentColor"
              />
            </svg>
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer yes 1`] = `
<div>
  <div
    class="sc-gEvEer hpVpdb sc-lnPyaJ fUzeBq"
  >
    <div
      class="sc-aXZVg gZgZQL"
    >
      <div
        class="sc-iGgWBj cRLRjd"
      >
        <div
          class="sc-kqGoIF gSKWVS"
        >
          <h2
            class="sc-dxcDKg gzfSFJ sc-kAyceB kDiAsV"
          >
            <span
              class="sc-gsFSXq cdZUuw"
            />
            Merci pour votre réponse.
          </h2>
        </div>
        <form>
          <label
            class="sc-dNsVcS JpRGI"
            for="suggestion"
          >
            Faire une suggestion pour améliorer cette page
          </label>
          <textarea
            class="sc-gdyeKB kWUKFl sc-ERObt hsIPks"
            cols="50"
            id="suggestion"
            maxlength="150"
            name="suggestion"
            placeholder="Une idée, une suggestion..."
            rows="3"
          />
          <div>
            <span
              class="sc-iMTnTL bCcoWP"
            >
              150
               caractères restants
            </span>
            <div
              class="sc-cWSHoV bKtA-De"
              role="status"
            >
              150
               caractères restants
            </div>
          </div>
          <div
            class="sc-fulCBj dCCqfF"
          >
            <button
              class="sc-kOPcWz dSQWfG sc-kRRyDe eWYjtA"
            >
              Envoyer
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should send matomo event when click no 1`] = `"[]"`;

exports[`<Feedback/> should send matomo event when click yes 1`] = `"[]"`;
